--- a/Leader Key/Support/Info.plist
+++ b/Leader Key/Support/Info.plist
@@ -2,13 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>CFBundleDevelopmentRegion</key>
+    <string>en</string>
+    <key>CFBundleLocalizations</key>
+    <array>
+        <string>en</string>
+    </array>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Viewer</string>
 			<key>CFBundleURLName</key>
-			<string>com.mikker.leaderkey</string>
+			<string>com.brnbw.LeaderKey</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>leaderkey</string>
